make some style changes to searchbar and ensure new entry button wraps correctly on smaller screens

--- a/css/layout.css
+++ b/css/layout.css
@@ -33,9 +33,8 @@
   }
 }
 
-@media screen and (max-width: 500px) {
-  .row-sml {
-    display: flex;
-    justify-content: space-between;
+@media screen and (max-width: 360px) {
+  .new-entry {
+    margin-top: 1rem;
   }
 }
