--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,11 @@ textarea {
   border-radius: 3px;
 }
 
+input:focus,
+textarea:focus {
+  outline-color: #562b81;
+}
+
 button:hover {
   cursor: pointer;
 }
@@ -61,11 +66,6 @@ textarea.entry {
 textarea.entry {
   resize: none;
   line-height: 1.5rem;
-}
-
-input.entry:focus,
-textarea.entry:focus {
-  outline-color: #562b81;
 }
 
 .submit-btn {
@@ -129,7 +129,9 @@ img.entry {
 
 .searchbar {
   flex-grow: 1;
-  border-right: none;
+  margin-right: 1rem;
+  padding: 9px 4px 9px 40px;
+  background: transparent url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E") no-repeat 13px center;
 }
 
 /* Delete Entries Section */
